testdata/baselines/reference/submodule/compiler/jsdocParamTagOnPropertyInitializer.errors.txt
/a.js(2,16): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class Foo {
        /**@param {string} x */
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m = x => x.toLowerCase();
    }
    